--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="repo.css">
-    <script src="main.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +18,8 @@
             </div>
             <div class="footer">
                 <h1 id="title"> title </h1>
-                <p id="description"> description </p>
+                <p class="description-on"> description </p>
+                <p class="description-off"> description </p>
                 <div class="ShowAll"> ... </div>
                 <div class="TagAndId">
                     <div class="tag">
@@ -41,4 +41,5 @@
         </div>
     </div>
 </body>
+<script src="main.js"></script>
 </html>
